@@ -482,9 +482,11 @@ variable</li>
 <li><b>category</b> - a user string to organize scripts into groups</li>
 <li><b>description</b> - a detailed description of what the script does</li>
 <li><b>errors</b> - errors returned from the script</li>
+<li><b>icon</b> - the location of an icon for the script</li>
 <li><b>modified</b> - when the script was last modified</li>
 <li><b>param</b> - description of a parameter to the script</li>
 <li><b>return</b> - return value</li>
+<li><b>screenshot</b> - the location of a screenshot for the script</li>
 <li><b>see_also</b> - a reference to another document or script</li>
 <li><b>summary</b> - a short description of what the script does</li>
 <li><b>todo</b> - unfinished work</li>
