@@ -48,3 +48,5 @@ CHANGES SINCE 2.1
 
 22. Change: better error message for dollar expansions with missing variable names.
 
+23. New: pragma annotate extended with icon and screenshot fields.
+
